funcionando ui service

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,8 +6,9 @@ bot.username=MetaMapaDDS_Bot
 
 urls.agregador=https://two025-tp-entrega-2-luichitw.onrender.com
 urls.fuentes=https://two025-tp-entrega-2-larasnr.onrender.com
-urls.pdi=https://dise-o2a.onrender.com
+urls.pdi=https://diseno-entrega.onrender.com
 urls.solicitudes=https://two025-tp-entrega-3-solicitudes.onrender.com
 urls.search=https://search-service-ft8x.onrender.com
+#urls.search=http://localhost:8082
 
 #${SOLICITUDES_URL:http://localhost:8084}
